add_subdirectory(hello-world)
add_subdirectory(cause-test)
add_subdirectory(master-slave)
add_subdirectory(merge-test)
add_subdirectory(micro-benchmark)
add_subdirectory(monitor)
add_subdirectory(mqttc_test)
add_subdirectory(ping-pong)
add_subdirectory(put-test)
add_subdirectory(repair-test)
add_subdirectory(timestamp)
add_subdirectory(stress)
add_subdirectory(senspot)
add_subdirectory(runs-test)

add_subdirectory(raft)
add_subdirectory(dht)