include_directories("./include")



# add_executable(repair-init repair-init.c)
# target_link_libraries(repair-init PUBLIC woof mio)

# TODO: undefined reference to woofcopy, woofdump and WooFPrintMeta
# add_executable(repair-start repair-start.c)

# TODO: wf->shared->filename
# add_handler(repair repair.c)
